[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.4",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "pytesseract>=0.3.13",
    "requests>=2.32.3",
    "speechrecognition>=3.14.2",
    "streamlit>=1.44.0",
    "textblob>=0.19.0",
    "trafilatura>=2.0.0",
]
